# NtCreateUserProcess_rs

./: Cargo.toml  README.md
src/: func.rs  lib.rs  main.rs
