[package]
name = "NtCreateUserProcess_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
noldr = { git = "https://github.com/Teach2Breach/noldr.git", branch = "main" }
ntapi = "0.4.1"
winapi = { version = "0.3.9", features = ["winbase", "errhandlingapi"] }

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
]
